--- a/playground/index.html
+++ b/playground/index.html
@@ -15,6 +15,7 @@
     <body>See source</body>
     <script src="dist/bsv.browser.min.js"></script>
     <script src="dist/run.browser.min.js"></script>
+    <script src="dist/bsv-ecies.min.js"></script>
     <script src="build.js?v=26"></script>
 
 </html>
